[project]
name = "kent-distribution"
version = "0.1.0"
description = "Implements calculation of the density and fitting (using maximum likelihood estimate) of the Kent distribution. A unittest is performed if kent_distribution.py is called from the command line."
authors = [
    {name = "Eric Daniël Fraenkel"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
